<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="zeros">$0.00</string>
    <string name="app_name">Register</string>
	<string name="total">Total</string>
	<string name="cash">Cash</string>
	<string name="check">Check</string>
	<string name="credit">Credit</string>
	<string name="gift">Gift Card</string>
	<string name="bitcoin">Bitcoin</string>
	<string name="newtrans">New Transaction</string>
	<string name="change">Change</string>
	<string name="complete">Complete</string>
	<string name="limit">Transaction limit reached!</string>
	<string name="argerror">Missing arguments!</string>
	<string name="paycheck">Pay with Check</string>
	<string name="cardNumHint">4242424242424242</string>
	<string name="cardExpHint">MMYY</string>
	<string name="cardCvvHint">CVV</string>
	<string name="paycredit">Pay with Credit</string>
	<string name="yearPrefix">20</string>
	<string name="creditDesc">Mobile POS Purchase</string>
	<string name="stripe_pubkey">pk_test_ySIw1bP4fUQtIxMOUOqOCzjK</string>
</resources>
