<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
	<TextView
		android:id="@+id/total_box"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/total"
		android:gravity="center"
		android:textSize="40sp"
		android:layout_marginBottom="5sp"
		/>
	<TextView
		android:id="@+id/change_box"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/change"
		android:gravity="center"
		android:textSize="40sp"
		/>
	<Button
		android:layout_marginTop="10sp"
		android:onClick="newtrans"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="30sp"
		android:text="@string/newtrans"
		android:background="#0080ff"
		style="@android:style/Widget.Holo.Button.Borderless"
		/>
</LinearLayout>
